--- a/website-project/package.json
+++ b/website-project/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.10",
     "eslint": "^9",
     "eslint-config-next": "15.4.6"
   }
